# virtual-reality_project

./: .gitignore  CMakeLists.txt  README.md
VR_project/: CMakeLists.txt
VR_project/Headers/: camera.h  object.h  particle.h  particleGenerator.h  shader.h  shaderVFG.h
VR_project/Shaders/: cubeMapVertexShader.txt  depthFragmentShader.txt  depthGeometryShader.txt  depthVertexShader.txt  fragmentShader.txt  fragmentShaderNormalLight.txt  particleFragmentShader.txt  particleVertexShader.txt  reflectiveObjectFragmentShader.txt  reflectiveObjectVertexShader.txt  screenFragmentShader.txt  vertexShader.txt
VR_project/Sources/: main.cpp  particleGenerator.cpp
VR_project/objects/: Shooting_cylinder.mtl  landspeeder.mtl
